--- a/invoice-2022-001.html
+++ b/invoice-2022-001.html
@@ -9,7 +9,7 @@
         />
         <meta name="author" content="Alexandre Borghi" />
         <!-- date-meta (= invoice.issued) -->
-        <meta name="dcterms.date" content="2022-05-13" />
+        <meta name="dcterms.date" content="17/05/2022" />
         <meta name="keywords" content="facture, invoice" />
         <!-- pagetitle -->
         <title>Facture n°2022-001</title>
@@ -127,8 +127,8 @@
             <div class="company lines">
                 <p><strong>Alexandre Borghi</strong></p>
                 <p>Conseil en informatique</p>
-                <p>6 Lieu-Dit Kerbodig</p>
-                <p>56250 Saint-Nolff</p>
+                    <p>6 Lieu-Dit Kerbodig</p>
+                    <p>56250 Saint-Nolff</p>
                 <p>Tél : <a href="tel:+33679480774">06 79 48 07 74</a></p>
                 <p>
                     Mail :
@@ -143,8 +143,8 @@
 
             <div class="client lines">
                 <p>Dremml</p>
-                <p>12 rue du Pont à Tan</p>
-                <p>56230 Questembert</p>
+                    <p>12 Rue du Pont à Tan</p>
+                    <p>56230 Questembert</p>
             </div>
 
             <div class="info lines">
@@ -163,7 +163,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="odd">
+                    <tr>
                         <td style="text-align: left">
                             Structure de données utilisateur
                         </td>
@@ -172,26 +172,59 @@
                         <td style="text-align: right">50€</td>
                         <td style="text-align: right">50€</td>
                     </tr>
-                    <tr class="even">
-                        <td style="text-align: left">Page de connexion</td>
+                    <tr>
+                        <td style="text-align: left">
+                            Page de connexion
+                        </td>
                         <td style="text-align: right">1</td>
                         <td style="text-align: left">Heures</td>
                         <td style="text-align: right">50€</td>
                         <td style="text-align: right">50€</td>
                     </tr>
-                    <tr class="odd">
-                        <td style="text-align: left">Système de traduction</td>
+                    <tr>
+                        <td style="text-align: left">
+                            Page de demande de récupération de mot de passe
+                        </td>
+                        <td style="text-align: right">1</td>
+                        <td style="text-align: left">Heures</td>
+                        <td style="text-align: right">50€</td>
+                        <td style="text-align: right">50€</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: left">
+                            Page de réinitialisation de mot de passe
+                        </td>
+                        <td style="text-align: right">1</td>
+                        <td style="text-align: left">Heures</td>
+                        <td style="text-align: right">50€</td>
+                        <td style="text-align: right">50€</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: left">
+                            Page d&#x27;administration
+                        </td>
                         <td style="text-align: right">2</td>
                         <td style="text-align: left">Heures</td>
                         <td style="text-align: right">50€</td>
                         <td style="text-align: right">100€</td>
                     </tr>
                     <tr>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
+                        <td style="text-align: left">
+                            Page d&#x27;administration de profil
+                        </td>
+                        <td style="text-align: right">1</td>
+                        <td style="text-align: left">Heures</td>
+                        <td style="text-align: right">50€</td>
+                        <td style="text-align: right">50€</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: left">
+                            Système de traduction
+                        </td>
+                        <td style="text-align: right">2</td>
+                        <td style="text-align: left">Heures</td>
+                        <td style="text-align: right">50€</td>
+                        <td style="text-align: right">100€</td>
                     </tr>
                     <tr class="total">
                         <td style="text-align: left">
@@ -200,7 +233,7 @@
                         <td style="text-align: right"></td>
                         <td style="text-align: left"></td>
                         <td style="text-align: right"></td>
-                        <td style="text-align: right"><strong>200€</strong></td>
+                        <td style="text-align: right"><strong>450€</strong></td>
                     </tr>
                     <tr class="total">
                         <td style="text-align: left">
@@ -215,12 +248,12 @@
             </table>
 
             <div class="info lines">
-                <p>Mode de règlement : virement</p>
+                <p>Mode de règlement : Virement</p>
                 <p>
                     Date limite de règlement : 60 jours après livraison ou fin
                     de prestation de services
                 </p>
-                <p>Pénalités pour retard de paiement : 3.00% par mois</p>
+                <p>Pénalités pour retard de paiement : 3% par mois</p>
             </div>
         </div>
         <footer class="lines">
