--- a/invoice-2022-001.html
+++ b/invoice-2022-001.html
@@ -8,10 +8,8 @@
             content="width=device-width, initial-scale=1.0, user-scalable=yes"
         />
         <meta name="author" content="Alexandre Borghi" />
-        <!-- date-meta (= invoice.issued) -->
         <meta name="dcterms.date" content="17/05/2022" />
         <meta name="keywords" content="facture, invoice" />
-        <!-- pagetitle -->
         <title>Facture n°2022-001</title>
         <style>
             * {
@@ -110,6 +108,17 @@
                     border: dashed 1px black;
                 }
             }
+
+            @media print {
+                a {
+                    color:black;
+                    text-decoration: none;
+                }
+
+                a:visited {
+                    color: black;
+                }
+            }
         </style>
     </head>
     <body>
@@ -118,11 +127,9 @@
                 <img src="./header-logo.png" alt="Logo Alexandre Borghi" />
             </div>
             <div>
-                <!-- pagetitle -->
                 <h1>Facture n°2022-001</h1>
             </div>
         </header>
-        <!-- $body$ -->
         <div class="body">
             <div class="company lines">
                 <p><strong>Alexandre Borghi</strong></p>
