--- a/invoice-2022-001.html
+++ b/invoice-2022-001.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Alexandre Borghi" />
         <meta name="dcterms.date" content="17/05/2022" />
         <meta name="keywords" content="facture, invoice" />
-        <title>Facture n°2022-001</title>
+        <title>Alexandre Borghi - Facture n°2022-001</title>
         <style>
             * {
                 box-sizing: border-box;
