--- a/invoice-2022-001.html
+++ b/invoice-2022-001.html
@@ -261,6 +261,7 @@
                     de prestation de services
                 </p>
                 <p>Pénalités pour retard de paiement : 3% par mois</p>
+                <p>IBAN : FR76 1558 9569 3005 2526 7934 085 - BIC : CMBRFR2BXXX</p>
             </div>
         </div>
         <footer class="lines">
